--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -15,6 +15,7 @@ a {text-decoration: none;}
 .home-mobile label {font-weight: normal;}
 .home-mobile .txt-center {text-align: center;}
 .home-mobile .txt-cap {text-transform: capitalize !important;}
+.home-mobile .txt-red {color: #E02E24;}
 .home-mobile .margin-b10 {margin-bottom: 10px !important;}
 .home-mobile .margin-b20 {margin-bottom: 20px !important;}
 .home-mobile .fix-both-side {margin-left: -3px !important;margin-right: -3px !important;}
@@ -25,6 +26,11 @@ a {text-decoration: none;}
 .home-mobile .no-pad {padding: 0 !important;}
 .home-mobile .no-pad-bot {padding-bottom: 0 !important;}
 .home-mobile .no-mag-bot {margin-bottom: 0 !important;}
+
+.home-mobile .msg {font-size: 13px;line-height: 20px;}
+.home-mobile .msg img {vertical-align: text-bottom;max-width: 16px;margin-right: 10px;}
+.home-mobile .msg.error {color: #E02E24;}
+.home-mobile .msg.success {color: #27AE60;}
 
 .home-mobile .title {position: relative;margin-bottom: 8px;}
 .home-mobile .title h3 {font-size: 15px;font-weight: 500;line-height: 22px;text-transform: uppercase;}
@@ -85,6 +91,10 @@ a {text-decoration: none;}
 .home-mobile .scroll-x::-webkit-scrollbar {display: none;}
 .home-mobile .boxes {display: flex;align-items: center;justify-content: flex-start;}
 .home-mobile .boxes.wrap {flex-wrap: wrap;}
+
+.home-mobile .modal.custom-modal {}
+.home-mobile .modal.custom-modal .modal-dialog {margin: 10px 0 0;}
+.home-mobile .modal.custom-modal .modal-content {border: 0;}
 
 .home-mobile .box {background: #FFFFFF;padding: 20px;border-radius: 8px;border: 1px solid #E0E0E0;margin-right: 16px;}
 .home-mobile .box:last-child {margin-right: 0;}
@@ -444,7 +454,7 @@ a {text-decoration: none;}
 .home-mobile .product-details .p-meta .p-title h4 {font-size: 16px;line-height: 22px;text-transform: capitalize;padding-right: 20px;}
 .home-mobile .product-details .p-meta .p-title .rating-label {background: #FFCF00;color: #FFFFFF;font-size: 14px;padding: 4px 10px;border-radius: 9px 0;}
 .home-mobile .product-details .p-meta .p-price {width: 68%;}
-.home-mobile .product-details .p-meta .p-quanlity, .home-mobile .product-details .p-meta .p-sold {font-size: 14px;}
+.home-mobile .product-details .p-meta .p-quantity, .home-mobile .product-details .p-meta .p-sold {font-size: 14px;}
 .home-mobile .product-details .p-meta .p-rating .count {color: #BDBDBD;}
 .home-mobile .product-details .p-share {}
 .home-mobile .product-details .p-share .socials {}
@@ -533,15 +543,60 @@ a {text-decoration: none;}
 .home-mobile .product-details .p-similar .box-p .box-p-meta .p-rating img {margin-right: 2px;width: 8px;}
 .home-mobile .product-details .p-similar .box-p .box-p-meta .p-name {margin-bottom: 0;}
 .home-mobile .product-details .p-similar .box-p .box-p-meta .p-name h4 {font-size: 14px;color: #333333;}
+.home-mobile .menu-bot.buy-product {padding: 0;}
+.home-mobile .menu-bot.buy-product .items {width: max-content;}
+.home-mobile .menu-bot.buy-product .items .item {padding: 8px 20px;border-radius: 0;width: 132px;max-width: 132px;color: #FFFFFF;font-size: 12px;line-height: 12px;text-align: center;height: 68px;justify-content: center;flex-direction: column;}
+.home-mobile .menu-bot.buy-product .items .item .price {font-size: 14px;line-height: 24px;}
+.home-mobile .menu-bot.buy-product .items .item.retail {background: rgba(255, 129, 78, 0.8);}
+.home-mobile .menu-bot.buy-product .items .item.combo {background: #FF814E;}
+.home-mobile .menu-bot.buy-product .items .item.group {background: #EC5229;}
 
-.home-mobile .modal {}
-.home-mobile .modal .modal-content {padding: 20px;}
-.home-mobile .modal .modal-content .head {}
-.home-mobile .modal .modal-content .head img {width: 72px;height: 72px;}
+.home-mobile .modal .modal-content .close {position: absolute;right: 12px;top: 12px;}
+.home-mobile .modal .modal-content .head {width: 100%;padding: 20px;border-bottom: 1px solid #F2F2F2;}
+.home-mobile .modal .modal-content .head .ava {margin-right: 12px;}
+.home-mobile .modal .modal-content .head .ava img {width: 72px;height: 72px;}
 .home-mobile .modal .modal-content .head .p-info {}
-.home-mobile .modal .modal-content .head .p-info h4 {font-size: 15px;font-weight: normal;}
-.home-mobile .modal .modal-content .head .p-info .p-price {}
-.home-mobile .modal .modal-content .head .p-info .p-quanlity {}
+.home-mobile .modal .modal-content .head .p-info h4 {font-size: 15px;font-weight: normal;padding-right: 20px;margin-bottom: 8px;}
+.home-mobile .modal .modal-content .head .p-info > .boxes {font-size: 14px;justify-content: space-between;}
+.home-mobile .modal .modal-content .head .p-info .p-price {color: #FF2028;font-size: 14px;font-weight: 500;}
+.home-mobile .modal .modal-content .title h3 {text-transform: capitalize;}
+.home-mobile .modal .modal-content .item {border-bottom: 1px solid #F2F2F2;padding: 20px 20px 14px;}
+.home-mobile .modal .modal-content .item:last-child {border-bottom: 0;}
+.home-mobile .modal .modal-content .list-cat {margin-bottom: 0;width: 100%;flex-wrap: wrap;}
+.home-mobile .modal .modal-content .list-cat li {padding: 0;border-radius: 6px;overflow: hidden;margin-bottom: 6px;}
+.home-mobile .modal .modal-content .list-cat li a {display: block;padding: 8px 12px;text-transform: capitalize;}
+.home-mobile .modal .modal-content .list-cat li a.active {background: #EC5229;color: #FFFFFF;}
+.home-mobile .modal .modal-content .list-cat li a.unable {color: #BDBDBD;cursor: not-allowed;}
+.home-mobile .modal .modal-content .quantity {border-bottom: 1px solid #F2F2F2;}
+.home-mobile .modal .modal-content .quantity > .boxes {background: #F2F2F2;padding: 16px 20px;justify-content: space-between;}
+.home-mobile .modal .modal-content .quantity label {font-weight: 500;}
+.home-mobile .modal .modal-content .quantity .control {font-size: 15px;}
+.home-mobile .modal .modal-content .quantity .control .btn {width: 24px;height: 24px;color: #3F241D;text-align: center;padding: 3px;border-radius: 4px;border: 1px solid #3F241D;}
+.home-mobile .modal .modal-content .quantity .control .btn.unable {border: none;cursor: not-allowed;}
+.home-mobile .modal .modal-content .quantity .control span {font-weight: 500;line-height: 24px;padding: 0 12px;}
+.home-mobile .modal .modal-content .quantity .error {font-weight: normal;padding: 8px 20px}
+.home-mobile .modal .modal-content .total-price {padding: 20px;}
+.home-mobile .modal .modal-content .total-price .boxes {justify-content: space-between;}
+.home-mobile .modal .modal-content .total-price label {font-weight: 500;font-size: 15px;}
+.home-mobile .modal .modal-content .total-price .t-price {color: #E02E24;}
+.home-mobile .modal .modal-content .total-price .join-with > label {color: #E02E24;font-weight: normal;font-size: 14px;margin-bottom: 8px;}
+.home-mobile .modal .modal-content .total-price .join-with .boxes label {color: #3F241D;font-size: 16px;font-weight: normal;}
+.home-mobile .modal .modal-content .total-price .join-with .ava {margin-right: 8px;}
+.home-mobile .modal .modal-content .total-price .join-with .ava img {width: 16px;height: 16px;border-radius: 50%;}
+.home-mobile .modal .modal-content .total-price .btn {padding: 12px 26px;border-radius: 6px;}
+.home-mobile .modal .modal-content .success-box {justify-content: space-between;padding: 15px;border-radius: 15px;background: #F2F2F2;}
+.home-mobile .modal .modal-content .success-box a {color: #27AE60;font-size: 13px;}
+#buyingroupModal {top: auto;}
+#buyingroupModal .modal-content {border-radius: 6px 6px 0 0;}
+#buyingroupModal .control {padding: 20px;justify-content: space-between;}
+#buyingroupModal .control .btn, #addsuccessModal .control .btn {padding: 12px 26px;border-radius: 6px;}
+#buyingroupModal .control .btn-addtocart, #addsuccessModal .control .btn-addtocart {color: #EC5229;border: 1px solid #EC5229;}
+.home-mobile .modal.custom-modal-success .modal-dialog-centered {display: -ms-flexbox;display: flex;-ms-flex-align: center;align-items: center;min-height: calc(100% - (.5rem * 2));}
+.home-mobile .modal.custom-modal-success .modal-content {padding: 30px;text-align: center;}
+.home-mobile .modal.custom-modal-success .modal-content h4 {font-size: 20px;font-weight: 500;margin-bottom: 24px;}
+.home-mobile .modal.custom-modal-success .modal-content p {font-size: 14px;margin-bottom: 32px;}
+.home-mobile .modal.custom-modal-success .modal-content p span {font-weight: 500;}
+.home-mobile .modal.custom-modal-success .modal-content .boxes {justify-content: space-between;}
 
 @media screen and (max-width: 640px) {
 	.home-mobile .header-content .featured ul li {width: 25%;}
@@ -631,6 +686,8 @@ a {text-decoration: none;}
 	.home-mobile .promote.boxes {justify-content: space-around;width: max-content;}
 
 	.home-mobile .brand-page .results .title {margin-bottom: 12px;}
+
+	.home-mobile .modal .modal-content .head .p-info > .boxes {flex-wrap: wrap;}
 }
 
 @media only screen and (max-device-width: 480px) { 
